After review. Replaced FA icons with MUI. Wrapped test components in customRender(). Fixed ActiveTaskTiles.test.tsx where props were missing. Changed navigation bar to fixed instead of sticky and added margin to home page to fit above nav.

--- a/src/pages/ActiveTasks/ActiveTasks.scss
+++ b/src/pages/ActiveTasks/ActiveTasks.scss
@@ -37,7 +37,7 @@
   }
 
   .search-icon {
-    margin-left: 15px;
+    margin-left: 12px;
     color: #3b5165;
   }
 }
