--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -6,6 +6,7 @@
   align-items: center;
   background-color: white;
   width: 100%;
+  margin-bottom: 56px;
 
   &__daily-tasks-button {
     margin-top: 2rem;
